--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "stryker-jasmine": "^0.7.2",
     "stryker-karma-runner": "^0.11.2",
     "stryker-typescript": "^0.8.0",
-    "stryker-webpack": "0.0.2",
+    "stryker-webpack": "^0.1.0",
+    "stryker-webpack-angular-preset": "0.0.1",
     "style-loader": "^0.19.1",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
